Added GET request for petById API
