# app/controllers/petController.ts
@@ -24,6 +24,20 @@ export class petController extends BaseController {
             );
         }
     }
+
+    public getPetById = async (req: Request, res: Response) => {
+        try {
+            const id = req.params.petId;
+            const pet = await this.petService.getPetById(id);
+            return this.appResponse.success(res, {pet});
+        } catch (error) {
+            return this.appResponse.error (
+                res,
+                AppConstants.ERROR_CODES.ERR_INTERNAL_SERVER_ERROR,
+                res.__(AppConstants.ERROR_MESSAGES.ERR_INTERNAL_SERVER_ERROR),
+            );
+        }
+    }
 }
 
 //     public addPet(req: Request, res: Response) {
