# app/routes/petRoutes.ts
@@ -3,5 +3,6 @@ import wiring from '../wiring';
 export class Routes {
     public routes(app): void {
         app.get('/pets', wiring.petController().getPet);
+        app.get('/pets/ById/:petId', wiring.petController().getPetById);
     }
 }
